# sift

./: .gitignore  README  README.md  main.py  pyproject.toml  train_h100.slurm
notes/: gui_specification.md  precision_architecture.md  rcac_final_updates.md  rcac_gautschi_runbook.md  systemd_daemon.md  train_loop_analysis.md  vector_db_schema.md
og_trusted/: note1.txt  note2.txt  note3.txt
og_trusted/metadata/: flickr8k_01.jpg.captions.txt  flickr8k_02.jpg.captions.txt  flickr8k_05.jpg.captions.txt  flickr8k_06.jpg.captions.txt  flickr8k_07.jpg.captions.txt  flickr8k_08.jpg.captions.txt  flickr8k_10.jpg.captions.txt  flickr8k_11.jpg.captions.txt  flickr8k_13.jpg.captions.txt  flickr8k_14.jpg.captions.txt  flickr8k_15.jpg.captions.txt  flickr8k_16.jpg.captions.txt  flickr8k_20.jpg.captions.txt  flickr8k_21.jpg.captions.txt  flickr8k_22.jpg.captions.txt  flickr8k_23.jpg.captions.txt  flickr8k_25.jpg.captions.txt  (+3 more)
qdrant_storage/: raft_state.json
src/: __init__.py  daemon.py  pipeline.py
tests/: conftest.py  test_audio_embedder.py  test_bundler.py  test_embedder.py  test_image_embedding.py  test_ocr_pipeline.py  test_srch.py  test_text_embedding.py  test_whisper_chain.py
trusted/: note1.txt  passage_00.txt  passage_01.txt  passage_02.txt  passage_04.txt  passage_05.txt  passage_06.txt  passage_07.txt  passage_09.txt  passage_10.txt  passage_11.txt  passage_12.txt  passage_15.txt  passage_17.txt  passage_19.txt  passage_20.txt  passage_21.txt  passage_22.txt  passage_23.txt  passage_24.txt  passage_26.txt  passage_28.txt  plan.txt  video_08_ApplyLipstick.avi
(+68 files in other folders)
